apps/dev/checkout-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-service
  labels:
    app: checkout-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: checkout-service
  template:
    metadata:
      labels:
        app: checkout-service
    spec:
      containers:
        - name: checkout
          image: nginxinc/nginx-unprivileged:1.27.4
          ports:
            - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: checkout-service
spec:
  selector:
    app: checkout-service
  ports:
    - port: 80
      targetPort: 8080
